infra/linkerd/authorization/auth-service-policy.yaml
# AuthorizationPolicy: auth-service 접근 제어
# Design Ref: MTU-N54 Section 3.5
# Plan SC: FR-N54.10
# CSAP: D-08 접근 통제
apiVersion: policy.linkerd.io/v1beta3
kind: AuthorizationPolicy
metadata:
  name: auth-service-policy
  namespace: saas
spec:
  targetRef:
    group: core
    kind: Server
    name: auth-service-server
  requiredAuthenticationRefs:
    - name: auth-service-mtls
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
